--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     
     <h3>Sample Web Pages</h3>
     
-    <p><a href="C:\Users\moran\OneDrive\Desktop\websites\exercises\page-1.html">A Tale of Two Cities</a></p>  
-    <p><a href="C:\Users\moran\OneDrive\Desktop\websites\exercises\page-2.html">Purple Rain</a></p>  
-    <p><a href="C:\Users\moran\OneDrive\Desktop\websites\exercises\page-3.html">Web Page</a></p>
+    <p><a href="exercises\page-1.html">A Tale of Two Cities</a></p>  
+    <p><a href="exercises\page-2.html">Purple Rain</a></p>  
+    <p><a href="exercises\page-3.html">Web Page</a></p>
 </body>
 
 </html>
