--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     
     <!-- Preload the poster image -->
     <link rel="preload" href="assets/videos/index-image.jpg" as="image">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S6W3WSNCWP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S6W3WSNCWP');
+</script>
 </head>
 <body>
     <header>
@@ -53,9 +63,10 @@
             <p><a href="exercises/hero-text.html">Hero block with animated text</a></p> 
             <p><a href="exercises/hero-image.html">Hero block with background image</a></p> 
             <p><a href="exercises/hero-video.html">Hero block with background video</a></p> 
+
+            portfolio
         </section>
     </main>
-
 
 </body>
 </html>
