--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="index-bg-media">
-            <video loop playsinline muted autoplay poster="assets/videos/index-video.mp4" class="background-video" disablepictureinpicture preload="auto"> 
+            <video loop playsinline muted autoplay poster="assets/videos/index-image.jpg" class="background-video" disablepictureinpicture preload="auto"> 
                 <source src="assets/videos/index-video.mp4" type="video/mp4">
             </video>
         </div>
