--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             }
         },
         "content": {
-            "href": "thommy21.github.io/Privacy.html"
+            "href": "https://thommy21.github.io//privacy.html"
         }
     });
     </script>
