--- a/portfolio/project-hero/index-4.html
+++ b/portfolio/project-hero/index-4.html
@@ -29,11 +29,27 @@
 
 <body>
 
-	
-    <!-- REPLACE this empty tag with your own header tag content -->
-	<header></header>
+<!-- header starts here -->
+<header class="theme-light cols-2-half text-center-mobile flex-row-reverse">
 
+    <div class="col-2 col-text">
+			<div class="badge corners-soft">10% off all week</div>
+        <h1>Claire’s Hair</h1>
+        <h2>Our team of stylists offer the latest fashions and techniques.</h2>
+<div class="container-btn">
+			<a href="#" class="btn btn-outline btn-soft"><span>Our salon</span><i class="fa-solid fa-chevron-right"></i></a><a href="#" class="btn btn-solid btn-soft"><span>Book now</span><i class="fa-solid fa-chevron-right"></i></a>
+		</div>
 
+</div>
+
+    <div class="col-2 col-visual desktop-bleed-all">
+        <figure>
+            <img src="assets/img/hair.png" alt="Placeholder image">
+        </figure>
+    </div>
+
+</header>
+<!-- header ends here -->
 
 	<!-- =============== Do not remove anything below this line ================= -->
     <main>
