--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -106,11 +106,11 @@
 
 			<div class="col-3">
 				<figure class="photos-zoom photos-brightness" style="overflow: hidden;">
-					<a href="crypto wallet/index.html"><img src="../assets/img/project-crypto-wallet.jpg" alt="Placeholder image"></a>
+					<a href="crypto-wallet/index.html"><img src="../assets/img/project-crypto-wallet.jpg" alt="Placeholder image"></a>
 				</figure>
 				<h3>Crypto Wallet</h3>
 				<p> A dark-themed responsive single-page website for a fictitious crypto wallet.</p>
-				<a href="crypto wallet/index.html" class="btn btn-solid btn-soft"><span>View project</span><i class="fas fa-arrow-right"></i></a>
+				<a href="crypto-wallet/index.html" class="btn btn-solid btn-soft"><span>View project</span><i class="fas fa-arrow-right"></i></a>
 			</div>
 
 		</div> <!-- End three-column flexbox grid -->
