--- a/store/index.html
+++ b/store/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store | Mary Smith</title>
+    <title>Store | Thomas Paredes</title>
     <meta name="description" content="A selection of hand-picked quality books from Amazon to enhance your web design, web development, and digital business skills.">
 
 	<!-- Stylesheets -->
@@ -53,7 +53,7 @@
     <!-- navbar start here -->
     <nav class="theme-dark"><div class="container-menu">
         <a href="../index.html" class="brand">
-            <img src="../assets/img/website-logo-sample.png" alt="Sample website logo"></a>
+            <img src="../assets/img/larger_ferrari_tp_logo.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
