--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -135,8 +135,8 @@
 		</ul>
 
 		<ul class="footer-icons">
-			<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="#" target="_blank"><i class="fab fa-github-square"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/thomas-paredes-ab2486337/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			<li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
 		<p class="privacy"><a href="/frontend/projects-ui/project-home-checklist/resources/privacy">Privacy &amp; Legal</a></p>
