--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 		</ul>
 
 		<ul class="footer-icons">
-			<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="#" target="_blank"><i class="fab fa-github-square"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/thomas-paredes-ab2486337/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			<li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
 		<p class="privacy"><a href="privacy.html">Privacy &amp; Legal</a></p>
