--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -10,29 +10,27 @@
 	<!-- Stylesheets -->
     <link rel="stylesheet" href="assets/css/lunadoge.css" />
     <link rel="stylesheet" href="assets/css/css-javascript.css" />
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
 
     <style>
 
         /* ============ Header Colours =============*/
-        header.hero-block-js { background-color: #f7df1e }
-        header.hero-block-js h1 { color: #222 }
-        header.hero-block-js h2 { color: var(--gray-700) }
+        header.hero-block-js { background-color: #080D10}
+        header.hero-block-js h1 { color: #B08D57 }
+        header.hero-block-js h2 { color: #E5DEDC }
 
         /* Main Colours */
         .theme-js {
-            background-image:#ff0000;background-image:
-            radial-gradient(at 40% 20%, hsla(28,100%,74%,1) 0, transparent 50%),
-            radial-gradient(at 80% 0%, hsla(189,100%,56%,1) 0, transparent 50%),
-            radial-gradient(at 0% 50%, hsla(355,85%,93%,1) 0, transparent 50%),
-            radial-gradient(at 80% 50%, hsla(340,100%,76%,1) 0, transparent 50%),
-            radial-gradient(at 0% 100%, hsla(22,100%,77%,1) 0, transparent 50%),
-            radial-gradient(at 80% 100%, hsla(242,100%,70%,1) 0, transparent 50%),
-            radial-gradient(at 0% 0%, hsla(343,100%,76%,1) 0, transparent 50%);
+            background-color:#5D0001;
         }
 
-        .theme-js .col-4 { background-color: var(--green-100) }
-        .theme-js h3 { color: #222 }
-        .theme-js p { color: #222 }
+        .theme-js .col-4 { background-color: #000;
+        border: solid 2px #B08D57; }
+        .theme-js h3 { color: #B08D57; }
+        .theme-js p { color: #E5DEDC }
 
         /* Button Colours: passive state */
         .theme-js a.btn {
@@ -41,9 +39,9 @@
         }
 
         /* Button Colours: active state */
-        .theme-js a.btn:hover { background-color: darkblue }
+        .theme-js a.btn:hover { background-color: #000 }
 
-        .theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) }
+        .theme-js a.btn { background-color:#B08D57; }
         .theme-js a.btn:hover { filter: brightness(140%) saturate(140%) }
 
     </style>
@@ -59,7 +57,7 @@
     <!-- navigation menu -->
 
     <nav class="container-menu menu-desktop menu-sticky">
-        <a href="../../index.html"><img src="../../assets/img/larger_ferrari_tp_logo.png" alt="website logo"></a>
+        <a href="../../index.html"><img src="../../assets/img/thomas_paredes_logo_200x40_transparent.png" alt="website logo"></a>
         <ul class="">
             <li><a href="../../index.html">Home</a></li>
             <li><a href="#">Portfolio</a></li>
@@ -231,7 +229,7 @@
 			<li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
-		<p class="index.html"> <a href="../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
+		<p class="index.html"> <a href="../../privacy.html" style="color: #B08D57; background-color:transparent;">Privacy &amp; Legal</a> </p>
 
     </footer>
 
