--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- menu and 'hero block' header -->
     <nav class="theme-dark"><div class="container-menu">
         <a href="#" class="brand">
-            <img src="assets/img/larger_ferrari_tp_logo.png" alt="Sample website logo">
+            <img src="assets/img/thomas_paredes_logo_200x40_transparent.png" alt="Sample website logo">
         </a>
     
         <div class="container-menu-links">
@@ -57,7 +57,8 @@
     
             <ul class="links-wrapper">
                 <li><a href="#">Home</a></li>
-                <li><a href="portfolio/index.html">Portfolio</a></li>
+                <li><a href="portfolio/index.html">Web Design</a></li>
+                <li><a href="portfolio/js/index.html">JavaScript</a></li>
                 <li><a href="store/index.html">Store</a></li>
                 <li><a class="btn btn-solid btn-soft" id="btn-cta" href="contact/index.html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
             </ul>
@@ -151,7 +152,8 @@
 
 		<ul class="footer-links">
 			<li><a href="#">Home</a></li>
-			<li><a href="portfolio/index.html">Portfolio</a></li>
+			<li><a href="portfolio/index.html">Web Design</a></li>
+            <li><a href="portfolio/js/index.html">JavaScript</a></li>
 			<li><a href="store/index.html">Store</a></li>
             <li><a href="contact/index.html">Contact</a></li>
 		</ul>
