--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -23,23 +23,25 @@
         header.hero-block-js h2 { color: #E5DEDC }
 
         /* Main Colours */
-        .theme-js {
-            background-color:#5D0001;
-        }
+        main {
+        background: #5D0001;
+        background: linear-gradient(90deg, rgba(93, 0, 1, 1) 0%, rgba(184, 0, 58, 1) 50%, rgba(201, 2, 22, 1) 100%);
+    }
 
         .theme-js .col-4 { background-color: #000;
         border: solid 2px #B08D57; }
+        
         .theme-js h3 { color: #B08D57; }
         .theme-js p { color: #E5DEDC }
 
         /* Button Colours: passive state */
         .theme-js a.btn {
-            color: #fff; background-color: blue; transition: 0.2s;
+            color: #0D1015; background-color: blue; transition: 0.2s;
             border-radius: 6px
         }
 
         /* Button Colours: active state */
-        .theme-js a.btn:hover { background-color: #000 }
+        .theme-js a.btn:hover { background-color: #E5DEDC }
 
         .theme-js a.btn { background-color:#B08D57; }
         .theme-js a.btn:hover { filter: brightness(140%) saturate(140%) }
@@ -57,7 +59,7 @@
     <!-- navigation menu -->
 
     <nav class="container-menu menu-desktop menu-sticky">
-        <a href="../../index.html"><img src="../../assets/img/thomas_paredes_logo_200x40_transparent.png" alt="website logo"></a>
+        <a href="../../index.html"><img src="../../assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
         <ul class="">
             <li><a href="../../index.html">Home</a></li>
             <li><a href="#">Portfolio</a></li>
@@ -142,7 +144,7 @@
 
             <div class="col-4">
 
-                <h3>Image Blue Filter</h3>
+                <h3>Image Blur Filter</h3>
 
                 <p>Uses CSS variables and HTML custom data attributes to adjust the filter blur property of an image.</p>
 
