--- a/portfolio/js/movies/index.html
+++ b/portfolio/js/movies/index.html
@@ -7,44 +7,40 @@
     <title>Thomas Paredes | Front-end Developer | JavaScript Movies Listing Project</title>
     <meta name="description" content="Uses the Fetch API to retrieve a searchable list of movie titles and images from the Internet Movie Database.">
 
-	<!-- Stylesheets -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="../assets/css/lunadoge.min.css" />
     <link rel="stylesheet" href="../assets/css/css-javascript.css" />
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome 6.1 icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
+        /* Custom CSS styles */
+        /* Header Colors */
+        header.hero-block-js { background-color: #0D1015; }
+        header.hero-block-js h1 { color: #B08D57; }
+        header.hero-block-js h2 { color: #E5DEDC; }
 
-        /* ============ Header Colours =============*/
-        header.hero-block-js { background-color: #f7df1e }
-        header.hero-block-js h1 { color: #222 }
-        header.hero-block-js h2 { color: var(--gray-700) }
-
-        /* Main Colours */
-
+        /* Main Colors */
         main {
-            background-image:#ff0000; background-image:
-            radial-gradient(at 40% 20%, hsla(28,100%,74%,1) 0, transparent 50%),
-            radial-gradient(at 80% 0%, hsla(189,100%,56%,1) 0, transparent 50%),
-            radial-gradient(at 0% 50%, hsla(355,85%,93%,1) 0, transparent 50%),
-            radial-gradient(at 80% 50%, hsla(340,100%,76%,1) 0, transparent 50%),
-            radial-gradient(at 0% 100%, hsla(22,100%,77%,1) 0, transparent 50%),
-            radial-gradient(at 80% 100%, hsla(242,100%,70%,1) 0, transparent 50%),
-            radial-gradient(at 0% 0%, hsla(343,100%,76%,1) 0, transparent 50%);
+            background: linear-gradient(90deg, rgba(93, 0, 1, 1) 0%, rgba(184, 0, 58, 1) 50%, rgba(201, 2, 22, 1) 100%);
         }
-        .theme-js .col-2 { background-color: var(--green-100) }
-        .theme-js h3 { color: #222 }
-        .theme-js p { color: #222 }
 
-        /* Button Colours: passive state */
+        /* Button Styles */
         .theme-js a.btn {
-            color: #fff; background-color: blue; transition: 0.2s;
-            border-radius: 6px
+            color: #fff;
+            background-image: linear-gradient(to right, #e052a0, #f15c41);
+            border-radius: 6px;
+            transition: 0.2s;
         }
+        .theme-js a.btn:hover { filter: brightness(140%) saturate(140%); }
 
-        .theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) }
-        .theme-js a.btn:hover { filter: brightness(140%) saturate(140%) }
-
-        /* ========= ENDS CUSTOM CSS FOR WEB PAGE ======= */
-
+        /* Search Bar */
         #search-bar {
             width: 100%;
             background: rgb(38, 39, 38);
@@ -55,79 +51,27 @@
             text-align: center;
             padding: 20px 0;
         }
-
-        #search-bar h1 {
-            margin: 0 20px;
-            color: #fff;
-        }
-
-        #search-bar a {
-            text-decoration: none;
-        }
-
-        #search-bar form {
-            display: flex;
-            align-items: center;
-        }
-
+        #search-bar h1 { margin: 0 20px; color: #fff; }
+        #search-bar form { display: flex; align-items: center; }
         #search {
             width: 230px;
             border: 1px solid black;
             outline: none;
             border-radius: 20px;
-            padding-left: 15px;
             padding: 10px 20px;
             font-size: 16px;
         }
 
+        /* Responsive Design */
         main {
             display: flex;
-            flex-direction: row; flex-wrap: wrap;
-            width: 100%;
+            flex-wrap: wrap;
             justify-content: space-between;
         }
-
-        /* Desktops/Laptops */
-        @media (min-width: 1200px) {
-            main {
-                padding: 3.5% calc((100% - 1140px)/2) 5% calc((100% - 1140px)/2);
-                margin: 0 auto;
-            }
-        }
-
-        /* Tablets and smaller desktops */
-        @media (min-width: 1025px) and (max-width: 1199px ) {
-            main { padding: 3% 14% 3% 14% }
-        }
-
-        /* Tablets */
-        @media (min-width: 768px) and (max-width: 1024px) {
-            main { padding: 4% 5% 4% 5% }
-        }
-
-        /* Larger mobiles */
-        @media (min-width: 400px) and (max-width: 767px)  {
-            main { padding: 7% 13% 8% 13% }
-        }
-
-        /* Smaller mobiles */
-        @media (max-width: 399px) {
-            main { padding: 7% 10% 8% 10% }
-        }
-
         main > div {
             margin: 19px 15px;
-            background: red;
+            background: #080D10;
         }
-
-        @media (min-width: 768px) {
-            main > div { width: 22% }
-        }
-
-        @media (max-width: 767px) {
-            main > div { width: 100%; margin: 20px 0 }
-        }
-
         main img {
             width: 100%;
             height: 89%;
@@ -137,37 +81,51 @@
             font-size: 18px;
             font-weight: 600;
             text-align: center;
-            color: #fff;
+            color: #B08D57;
             padding: 12px;
         }
+        main {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+main .movie {
+	width: 23%;
+	min-width: 200px;
+	background-color: #080D10;
+	margin: 19px 15px;
+}
+
+main .movie img {
+	width: 100%;
+	height: 89%;
+	object-fit: cover;
+}
+
+main .movie h2 {
+	font-size: 18px;
+	font-weight: 600;
+	text-align: center;
+	color: #B08D57;
+	padding: 12px;
+}
 
     </style>
-
-	<!-- Font Awesome 6.1 icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
-
 <body>
-
-    <!-- navigation menu -->
-
+    <!-- Navigation Menu -->
     <nav class="container-menu menu-desktop menu-sticky">
-        <a href="../../../index.html"><img src="../../../assets/img/thomas_paredes_logo_200x40_transparent.png" alt="website logo"></a>
-        <ul class="">
+        <a href="../../../index.html"><img src="../../../assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
+        <ul>
             <li><a href="../../../index.html">Home</a></li>
             <li><a href="../../../portfolio/index.html">Portfolio</a></li>
             <li><a href="../../../contact/index.html" id="btn-cta"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
         </ul>
-        <div class="item-icon">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
     </nav>
 
-    <!-- header hero block -->
+    <!-- Header Hero Block -->
     <header class="hero-block hero-block-js">
         <div class="hero-text-container">
             <h1>Movies Listing <span>JavaScript Project</span></h1>
@@ -175,124 +133,89 @@
         </div>
     </header>
 
+    <!-- Search Bar -->
     <div id="search-bar">
         <a href="../../../index.html"><h1>Movies</h1></a>
         <form id="form">
-            <input
-                type="text"
-                id="search"
-                placeholder="Search"
-                class="search"
-            />
+            <input type="text" id="search" placeholder="Search" class="search" />
         </form>
     </div>
 
-    <!-- main content with sections -->
-    <main id="main">
-
-
-    </main>
+    <!-- Main Content -->
+    <main id="main"></main>
 
     <script>
-// Define the URL for fetching popular movies from the MovieDB API.
-const apiUrl = 'https://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc&api_key=04c35731a5ee918f014970082a0088b1&page=1';
-// Base path for movie poster images from The Movie Database.
+  const apiUrl = 'https://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc&api_key=04c35731a5ee918f014970082a0088b1&page=1';
 const IMGPATH = "https://image.tmdb.org/t/p/w1280";
-// Define the URL for searching movies by a query string.
-const SEARCHAPI =
-"https://api.themoviedb.org/3/search/movie?&api_key=04c35731a5ee918f014970082a0088b1&query=";
-	
-// Get references to the main container and the form in the document.
+const SEARCHAPI = "https://api.themoviedb.org/3/search/movie?&api_key=04c35731a5ee918f014970082a0088b1&query=";
+
 const main = document.getElementById("main");
 const form = document.getElementById("form");
 const search = document.getElementById("search");
-	
-// Call showMovies function initially with the popular movies URL.
+
+// Fetch and display initial popular movies
 showMovies(apiUrl);
-	
-// Asynchronous function to fetch movies and display them on the page.
+
+// Fetch and render movies
 async function showMovies(url) {
 	try {
-		// Fetch the movie data from the API URL.
 		const res = await fetch(url);
-		// Convert the response to JSON.
 		const data = await res.json();
-	
-		// For each movie in the results, create and append elements to display it.
-		data.results.forEach(element => {
-			const el = document.createElement('div'); // Container for each movie.
-			const image = document.createElement('img'); // To display the movie poster.
-			const text = document.createElement('h2'); // To display the movie title.
-	
-			// If the title is too long, truncate it.
-			text.innerHTML = truncateString(`${element.title}`, 20);
-			// Set the source of the image to the full path including the base IMGPATH.
-			image.src = IMGPATH + element.poster_path;
-	
-			// Append the image and text to the movie container.
-			el.appendChild(image);
-			el.appendChild(text);
-			// Finally, append the movie container to the main content area.
-			main.appendChild(el);
+
+		main.innerHTML = '';
+
+		data.results.forEach(movie => {
+			const movieEl = document.createElement('div');
+			movieEl.classList.add('movie'); // Add class for styling
+
+			const image = document.createElement('img');
+			const title = document.createElement('h2');
+
+			image.src = IMGPATH + movie.poster_path;
+			image.alt = movie.title;
+			title.textContent = truncateString(movie.title, 20);
+
+			movieEl.appendChild(image);
+			movieEl.appendChild(title);
+			main.appendChild(movieEl);
 		});
-	} catch (error) {
-		// If an error occurs during fetch or processing, log it to the console.
-		console.log('Error fetching movies:', error);
+	} catch (err) {
+		console.error("Error fetching movies:", err);
 	}
 }
-	
-// Add an event listener to the form to handle movie searches.
+
+
+// Truncate long titles
+const truncateString = (str, num) =>
+	str.length > num ? str.slice(0, num) + '...' : str;
+
+// Handle search form submit
 form.addEventListener("submit", (e) => {
-	e.preventDefault(); // Prevent the form from submitting in the traditional way.
-	main.innerHTML = ''; // Clear the main content area before displaying new results.
-	const searchTerm = search.value; // Get the search term from the input field.
+	e.preventDefault();
+	const searchTerm = search.value.trim();
 	if (searchTerm) {
-		showMovies(SEARCHAPI + searchTerm); // Fetch and display movies based on the search term.
-		search.value = ""; // Clear the search input field.
+		showMovies(SEARCHAPI + searchTerm);
+		search.value = "";
 	}
 });
-	
-// Utility function to truncate a string to a specified length.
-function truncateString(str, num) {
-	if (str.length > num) {
-		return str.slice(0, num) + '...'; // Truncate and add ellipsis.
-	}
-	return str; // Return the original string if it's shorter than the specified length.
-}
-
     </script>
 
-
-    <!-- footer -->
-	<footer>
-
-		<h2>Thomas Paredes</h2>
-
-		<h3>Excellence in digital creation</h3>
-
-		<ul class="footer-links">
-			<li><a href="../../../index.html">Home</a></li>
-			<li><a href="../../../portfolio/index.html">Portfolio</a></li>
-			<li><a href="../../../contact/index.html">Contact</a></li>
-		</ul>
-
-		<ul class="footer-icons">
-			<li><a href="www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
-		</ul>
-
-		<p class="index.html"> <a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
-
+    <!-- Footer -->
+    <footer>
+        <h2>Thomas Paredes</h2>
+        <h3>Excellence in digital creation</h3>
+        <ul class="footer-links">
+            <li><a href="../../../index.html">Home</a></li>
+            <li><a href="../../../portfolio/index.html">Portfolio</a></li>
+            <li><a href="../../../contact/index.html">Contact</a></li>
+        </ul>
+        <ul class="footer-icons">
+            <li><a href="www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
+        </ul>
+        <p><a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a></p>
     </footer>
 
     <script src="../assets/js/menu.js"></script>
-
-
 </body>
 </html>
-
-
-
-
-
-
