--- a/portfolio/js/quotes/index.html
+++ b/portfolio/js/quotes/index.html
@@ -7,53 +7,34 @@
     <title>Thomas Paredes | Front-end Developer | JavaScript Random Quotes Generator Project</title>
     <meta name="description" content="Uses the Fetch API to retrieve a randomly-choosen selection of ten inspiring quotations.">
 
-	<!-- Stylesheets -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="../assets/css/lunadoge.min.css" />
     <link rel="stylesheet" href="../assets/css/css-javascript.css" />
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
+
     <style>
-
-        /* ============ Header Colours =============*/
-        header.hero-block-js { background-color: #f7df1e }
-        header.hero-block-js h1 { color: #222 }
-        header.hero-block-js h2 { color: var(--gray-700) }
-
-        /* Main Colours */
+        /* Custom CSS for the page */
+        header.hero-block-js { background-color: #0D1015 }
+        header.hero-block-js h1 { color: #B08D57 }
+        header.hero-block-js h2 { color: #E5DEDC }
 
         main {
-            background-image:#ff0000; background-image:
-            radial-gradient(at 40% 20%, hsla(28,100%,74%,1) 0, transparent 50%),
-            radial-gradient(at 80% 0%, hsla(189,100%,56%,1) 0, transparent 50%),
-            radial-gradient(at 0% 50%, hsla(355,85%,93%,1) 0, transparent 50%),
-            radial-gradient(at 80% 50%, hsla(340,100%,76%,1) 0, transparent 50%),
-            radial-gradient(at 0% 100%, hsla(22,100%,77%,1) 0, transparent 50%),
-            radial-gradient(at 80% 100%, hsla(242,100%,70%,1) 0, transparent 50%),
-            radial-gradient(at 0% 0%, hsla(343,100%,76%,1) 0, transparent 50%);
+            background: linear-gradient(90deg, rgba(93, 0, 1, 1) 0%, rgba(184, 0, 58, 1) 50%, rgba(201, 2, 22, 1) 100%);
         }
+
         .theme-js .col-2 { background-color: var(--green-100) }
-        .theme-js h3 { color: #222 }
-        .theme-js p { color: #222 }
+        .theme-js h3, .theme-js p { color: #222 }
 
-        /* Button Colours: passive state */
         .theme-js a.btn {
-            color: #fff; background-color: blue; transition: 0.2s;
-            border-radius: 6px
+            color: #B08D57; background-color: #0D1015; transition: 0.2s;
+            border-radius: 6px;
         }
 
-        .theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) }
         .theme-js a.btn:hover { filter: brightness(140%) saturate(140%) }
-
-        /* ========= ENDS CUSTOM CSS FOR WEB PAGE ======= */
-
-        .theme-js:first-of-type { padding-bottom: 0 }
-
-        .theme-js:first-of-type h2 {
-            font-family: 'Merriweather', serif;
-        }
-
-        .theme-js:first-of-type h3 {
-            font-family: 'Merriweather', serif; font-style: italic; margin-bottom: 32px
-        }
 
         .btn-solid {
             margin-top: 20px;
@@ -64,11 +45,10 @@
         }
 
         .btn-solid:hover {
-            background-color: darkblue;
-            border-color: darkblue;
-            color: #fff
+            background-color: #B08D57;
+            border-color: darkgoldenrod;
+            color: black;
         }
-        .btn-solid i { margin-right: 12px }
 
         .col-3 {
             border: 1px solid #888;
@@ -81,32 +61,19 @@
         }
 
         .col-3 h3 { font-weight: 600; font-size: 19px }
-
         .col-3 p { font-style: italic; font-family: 'Merriweather', serif; }
-
         .col-3 p span { color: red }
-
     </style>
 
-	<!-- Font Awesome 6.1 icons -->
+    <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
-    <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
 </head>
 
-
 <body>
-
-    <!-- navigation menu -->
-
+    <!-- Navigation Menu -->
     <nav class="container-menu menu-desktop menu-sticky">
-        <a href="../../../index.html"><img src="../../../assets/img/thomas_paredes_logo_200x40_transparent.png" alt="website logo"></a>
-        <ul class="">
+        <a href="../../../index.html"><img src="../../../assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
+        <ul>
             <li><a href="../../../index.html">Home</a></li>
             <li><a href="../../../portfolio/index.html">Portfolio</a></li>
             <li><a href="../../../contact/index.html" id="btn-cta"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
@@ -118,7 +85,7 @@
         </div>
     </nav>
 
-    <!-- header hero block -->
+    <!-- Header Hero Block -->
     <header class="hero-block hero-block-js">
         <div class="hero-text-container">
             <h1>Random Quotes Generator <span>JavaScript Project</span></h1>
@@ -126,99 +93,66 @@
         </div>
     </header>
 
-    <!-- main content with sections -->
+    <!-- Main Content -->
     <main>
-
         <section class="container-flex theme-js">
-
-        <div class="col-1 text-center">
-			<h2>Inspiring Quotations</h2>
-			<h3>Click the button below to be inspired by nine uplifting quotations from wise men and women through the ages.</h3>
-
-            <a class="btn btn-solid" id="btn-quotes"><i class="fa-regular fa-comment"></i> View Quotes </a>
-		</div>
-
+            <div class="col-1 text-center">
+                <h2>Inspiring Quotations</h2>
+                <h3>Click the button below to be inspired by nine uplifting quotations from wise men and women through the ages.</h3>
+                <button class="btn btn-solid" id="btn-quotes"><i class="fa-regular fa-comment"></i> View Quotes</button>
+            </div>
         </section>
 
-        <section class="container-flex text-center" id="quotes-box">
-
-        </section><!-- end of section updated by JavaScript-->
-
+        <section class="container-flex text-center" id="quotes-box"></section>
     </main>
 
+    <!-- JavaScript -->
     <script>
-// Add a click event listener to the button with the ID "btn-quotes".
-// When the button is clicked, the function fetchRandomNumQuotes will be executed.
-document.getElementById("btn-quotes").addEventListener("click", fetchRandomNumQuotes);
+        window.addEventListener("DOMContentLoaded", () => {
+    const button = document.getElementById("btn-quotes");
+    const quotesBox = document.getElementById("quotes-box");
 
-// Asynchronous function to fetch 15 quotes in parallel and display them.
-async function fetchRandomNumQuotes() {
-    try {
-        // Create an array of 15 fetch Promises
-        const quoteFetches = Array.from({ length: 15 }, () =>
-            fetch('https://thequoteshub.com/api/').then(res => res.json())
-        );
+    button.addEventListener("click", async () => {
+        try {
+            const randomPage = Math.floor(Math.random() * 50) + 1; // Assumes there are at least 50 pages
 
-        // Wait for all 15 requests to complete
-        const quotes = await Promise.all(quoteFetches);
+            const response = await fetch(`https://api.quotable.io/quotes?page=${randomPage}&limit=9`);
+            const data = await response.json();
+            const selectedQuotes = data.results;
 
-        // Initialize an empty string to accumulate HTML content
-        let html_block = "";
+            const htmlBlock = selectedQuotes.map(quote => `
+                <div class="col-3">
+                    <p><span>“</span>${quote.content}<span>”</span></p>
+                    <h3>${quote.author || "Anonymous"}</h3>
+                </div>
+            `).join("");
 
-        // Loop through each quote object
-        quotes.forEach(quote => {
-            if (!quote.author) {
-                quote.author = "Anonymous";
-            }
-
-            html_block += `<div class="col-3">
-                <p><span>“</span>${quote.text}<span>”</span></p>
-                <h3>${quote.author}</h3>
-            </div>`;
-        });
-
-        // Insert the accumulated HTML content into the element with the ID "quotes-box"
-        document.getElementById("quotes-box").innerHTML = html_block;
-
-    } catch (error) {
-        console.log('Error fetching quotes:', error);
-    }
-}
-
+            quotesBox.innerHTML = htmlBlock;
+        } catch (error) {
+            console.error("Error fetching quotes:", error);
+        }
+    });
+});
 
     </script>
+    
 
-
-    <!-- footer -->
-	<footer>
-
-		<h2>Thomas Paredes</h2>
-
-		<h3>Excellence in digital creation</h3>
-
-		<ul class="footer-links">
-			<li><a href="../../../index.html">Home</a></li>
-			<li><a href="../../../portfolio/index.html">Portfolio</a></li>
-			<li><a href="../../../contact/index.html">Contact</a></li>
-		</ul>
-
-		<ul class="footer-icons">
-			<li><a href="www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
-		</ul>
-
-		<p class="index.html"> <a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
-
+    <!-- Footer -->
+    <footer>
+        <h2>Thomas Paredes</h2>
+        <h3>Excellence in digital creation</h3>
+        <ul class="footer-links">
+            <li><a href="../../../index.html">Home</a></li>
+            <li><a href="../../../portfolio/index.html">Portfolio</a></li>
+            <li><a href="../../../contact/index.html">Contact</a></li>
+        </ul>
+        <ul class="footer-icons">
+            <li><a href="www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
+        </ul>
+        <p><a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a></p>
     </footer>
 
     <script src="../assets/js/menu.js"></script>
-
-
 </body>
 </html>
-
-
-
-
-
-
