--- a/portfolio/js/tip-calculator/index.html
+++ b/portfolio/js/tip-calculator/index.html
@@ -4,46 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thomas Paredes | Front-end Developer| Tip Calculator Project</title>
+    <title>Thomas Paredes | Front-end Developer | Tip Calculator Project</title>
     <meta name="description" content="Calculates the tip for a restaurant bill based on the level of service and the number of customers.">
 
-	<!-- Stylesheets -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="../assets/css/lunadoge.min.css" />
     <link rel="stylesheet" href="../assets/css/css-javascript.css" />
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome 6.1 icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
-
-        /* ============ Header Colours =============*/
-        header.hero-block-js { background-color: #f7df1e }
-        header.hero-block-js h1 { color: #222 }
-        header.hero-block-js h2 { color: var(--gray-700) }
-
-        /* Main Colours */
+        /* Custom styles for the page */
+        header.hero-block-js { background-color: #0D1015 }
+        header.hero-block-js h1 { color: #B08D57 }
+        header.hero-block-js h2 { color: #E5DEDC }
 
         main {
-            background-image:#ff0000; background-image:
-            radial-gradient(at 40% 20%, hsla(28,100%,74%,1) 0, transparent 50%),
-            radial-gradient(at 80% 0%, hsla(189,100%,56%,1) 0, transparent 50%),
-            radial-gradient(at 0% 50%, hsla(355,85%,93%,1) 0, transparent 50%),
-            radial-gradient(at 80% 50%, hsla(340,100%,76%,1) 0, transparent 50%),
-            radial-gradient(at 0% 100%, hsla(22,100%,77%,1) 0, transparent 50%),
-            radial-gradient(at 80% 100%, hsla(242,100%,70%,1) 0, transparent 50%),
-            radial-gradient(at 0% 0%, hsla(343,100%,76%,1) 0, transparent 50%);
+            background: linear-gradient(90deg, rgba(93, 0, 1, 1) 0%, rgba(184, 0, 58, 1) 50%, rgba(201, 2, 22, 1) 100%);
         }
+
         .theme-js .col-2 { background-color: var(--green-100) }
-        .theme-js h3 { color: #222 }
-        .theme-js p { color: #222 }
+        .theme-js h3, .theme-js p { color: #E5DEDC }
 
-        /* Button Colours: passive state */
         .theme-js a.btn {
-            color: #fff; background-color: blue; transition: 0.2s;
-            border-radius: 6px
+            color: #fff;
+            background-image: linear-gradient(to right, #e052a0, #f15c41);
+            border-radius: 6px;
+            transition: 0.2s;
         }
 
-        .theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) }
         .theme-js a.btn:hover { filter: brightness(140%) saturate(140%) }
-
-        /* ========= ENDS CUSTOM CSS FOR WEB PAGE ======= */
 
         .bg-gray {
             padding: 20px;
@@ -54,57 +50,42 @@
         }
 
         .bg-lightblue {
-            background-color: #9ae6b4;
+            background-color: #5D0001;
             padding: 20px;
             width: 100%;
             max-width: 800px;
             margin: 0 auto;
         }
-        .bg-lightblue p {
-            font-size: 22px
-        }
 
+        .bg-lightblue p { font-size: 22px }
 
         form { font-size: 18px }
-
         form p { margin-bottom: 12px }
         input, select { font-size: 18px; padding: 4px; margin-bottom: 18px }
-
-        select { font-size: 16px}
+        select { font-size: 16px }
 
         .btn {
             display: block;
             padding: 18px 24px;
-            border: 1px none #000;
-            background-color: blue;
-            transition: all 350ms ease;
-            color: #fff;
+            background-color: #B08D57;
+            color: #0D1015;
             font-size: 20px;
             line-height: 1;
             margin-top: 32px;
             border-radius: 50px;
+            transition: all 350ms ease;
         }
-        .btn:hover {background-color: darkblue }
 
+        .btn:hover { background-color: #E5DEDC }
         .btn i { margin-right: 16px }
-
-
-
     </style>
-
-	<!-- Font Awesome 6.1 icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
-
 <body>
-
-    <!-- navigation menu -->
-
+    <!-- Navigation menu -->
     <nav class="container-menu menu-desktop menu-sticky">
-        <a href="../../../index.html"><img src="../../../assets/img/thomas_paredes_logo_200x40_transparent.png" alt="website logo"></a>
-        <ul class="">
+        <a href="../../../index.html"><img src="../../../assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
+        <ul>
             <li><a href="../../../index.html">Home</a></li>
             <li><a href="../../../portfolio/index.html">Portfolio</a></li>
             <li><a href="../../../contact/index.html" id="btn-cta"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
@@ -116,7 +97,7 @@
         </div>
     </nav>
 
-    <!-- header hero block -->
+    <!-- Header hero block -->
     <header class="hero-block hero-block-js">
         <div class="hero-text-container">
             <h1>Tip Calculator <span>JavaScript Project</span></h1>
@@ -124,120 +105,96 @@
         </div>
     </header>
 
-    <!-- main content with sections -->
+    <!-- Main content -->
     <main>
-
         <section class="container-flex theme-js" id="conta">
-
             <div class="bg-gray">
                 <form>
-                <p>How much was your bill?</p>
+                    <p>How much was your bill?</p>
+                    <p><input id="billAmount" type="number" placeholder="Bill Amount" min="0" step="0.01"></p>
 
-                    <p>&nbsp;<input id="billAmount" type="text" placeholder="Bill Amount"></p>
-
-                    <p>How was your service?</p> <select id="serviceQuality">
+                    <p>How was your service?</p>
+                    <select id="serviceQuality">
                         <option disabled selected value="0">-- Choose an Option --</option>
-                        <option value="0.3">30&#37; &#45; Outstanding</option>
-                        <option value="0.2">20&#37; &#45; Good</option>
-                        <option value="0.15">15&#37; &#45; It was OK</option>
-                        <option value="0.1">10&#37; &#45; Bad</option>
-                        <option value="0.05">5&#37; &#45; Terrible</option>
+                        <option value="0.3">30% - Outstanding</option>
+                        <option value="0.2">20% - Good</option>
+                        <option value="0.15">15% - It was OK</option>
+                        <option value="0.1">10% - Bad</option>
+                        <option value="0.05">5% - Terrible</option>
                     </select>
+
                     <p>How many people are sharing the bill?</p>
-                    <input id="numOfPeople" type="text" placeholder="Number of People" maxlength="
-                    4" style="width: 32px"> &nbsp;people
+                    <input id="numOfPeople" type="number" placeholder="Number of People" min="1" value="1">
                 </form>
 
-                <button type="button" class="btn" id="calculate"> <i class="fa-solid fa-calculator"></i>Calculate Tip</button>
-        </div>
-        <!--calculator end-->
+                <button type="button" class="btn" id="calculate"><i class="fa-solid fa-calculator"></i>Calculate Tip</button>
+            </div>
 
-        <!--totalTip -->
-        <div id="tipDisplayBox" class="bg-lightblue">
-            <p>Total tip: €<span id="tipTotal"></span></p>
-            <p>Tip each: <b>€<span id="tipEach"></span></b></p>
-        </div>
-
+            <!-- Tip display -->
+            <div id="tipDisplayBox" class="bg-lightblue" style="display: none;">
+                <p>Total tip: €<span id="tipTotal"></span></p>
+                <p>Tip each: <b>€<span id="tipEach"></span></b></p>
+            </div>
         </section>
-
     </main>
 
     <script>
-// Hide the tip amount on load
-const tipDisplayBox = document.getElementById("tipDisplayBox");
-const billAmountInput = document.getElementById("billAmount");
-const serviceQualityInput = document.getElementById("serviceQuality");
-const numOfPeopleInput = document.getElementById("numOfPeople");
-const calculateButton = document.getElementById("calculate");
-const tipTotalSpan = document.getElementById("tipTotal");
-const tipEachSpan = document.getElementById("tipEach");
+        // Select DOM elements
+        const tipDisplayBox = document.getElementById("tipDisplayBox");
+        const billAmountInput = document.getElementById("billAmount");
+        const serviceQualityInput = document.getElementById("serviceQuality");
+        const numOfPeopleInput = document.getElementById("numOfPeople");
+        const calculateButton = document.getElementById("calculate");
+        const tipTotalSpan = document.getElementById("tipTotal");
+        const tipEachSpan = document.getElementById("tipEach");
 
-tipDisplayBox.style.display = "none";
-numOfPeopleInput.value = 1;
+        // Function to calculate the tip
+        const calculateTip = () => {
+            const billAmount = parseFloat(billAmountInput.value);
+            const serviceQuality = parseFloat(serviceQualityInput.value);
+            let numOfPeople = parseInt(numOfPeopleInput.value, 10);
 
-// Calculate tip
-function calculateTip() {
-    const billAmount = parseFloat(billAmountInput.value);
-    const serviceQuality = parseFloat(serviceQualityInput.value);
-    let numOfPeople = parseInt(numOfPeopleInput.value);
+            // Validate input
+            if (isNaN(billAmount) || isNaN(serviceQuality) || billAmount <= 0) {
+                alert("Please enter valid values for bill amount and service quality.");
+                return;
+            }
 
-    // Validate input
-    if (isNaN(billAmount) || isNaN(serviceQuality) || billAmount <= 0) {
-        alert("Please enter valid values for bill amount and service quality.");
-        return;
-    }
+            if (isNaN(numOfPeople) || numOfPeople <= 0) {
+                numOfPeople = 1;
+                numOfPeopleInput.value = 1;
+            }
 
-    if (isNaN(numOfPeople) || numOfPeople <= 0) {
-        numOfPeople = 1;
-        numOfPeopleInput.value = 1;
-    }
+            // Calculate tip
+            const tipTotal = (billAmount * serviceQuality).toFixed(2);
+            const tipEach = (tipTotal / numOfPeople).toFixed(2);
 
-    // Calculate tip
-    const tipTotal = (billAmount * serviceQuality).toFixed(2);
-    const tipEach = (tipTotal / numOfPeople).toFixed(2);
+            // Display the tip
+            tipDisplayBox.style.display = "block";
+            tipTotalSpan.textContent = tipTotal;
+            tipEachSpan.textContent = tipEach;
+        };
 
-    // Display the tip
-    tipDisplayBox.style.display = "block";
-    tipTotalSpan.textContent = tipTotal;
-    tipEachSpan.textContent = tipEach;
-}
-
-// Attach event listener to the calculate button
-calculateButton.addEventListener("click", calculateTip);
-
+        // Attach event listener to the calculate button
+        calculateButton.addEventListener("click", calculateTip);
     </script>
 
-
-    <!-- footer -->
-	<footer>
-
-		<h2>Thomas Paredes</h2>
-
-		<h3>Excellence in digital creation</h3>
-
-		<ul class="footer-links">
-			<li><a href="../../../index.html">Home</a></li>
-			<li><a href="../../../portfolio/index.html">Portfolio</a></li>
-			<li><a href="../../../contact/index.html">Contact</a></li>
-		</ul>
-
-		<ul class="footer-icons">
-			<li><a href="www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
-		</ul>
-
-		<p class="index.html"> <a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
-
+    <!-- Footer -->
+    <footer>
+        <h2>Thomas Paredes</h2>
+        <h3>Excellence in digital creation</h3>
+        <ul class="footer-links">
+            <li><a href="../../../index.html">Home</a></li>
+            <li><a href="../../../portfolio/index.html">Portfolio</a></li>
+            <li><a href="../../../contact/index.html">Contact</a></li>
+        </ul>
+        <ul class="footer-icons">
+            <li><a href="www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
+        </ul>
+        <p><a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a></p>
     </footer>
 
     <script src="../assets/js/menu.js"></script>
-
-
 </body>
 </html>
-
-
-
-
-
-
