--- a/portfolio/js/colours/index.html
+++ b/portfolio/js/colours/index.html
@@ -102,7 +102,7 @@
 <body>
     <!-- Navigation Menu -->
     <nav class="container-menu menu-desktop menu-sticky">
-        <a href="../../../index.html"><img src="../../../assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
+        <a href="../../../index.html"><img src="../assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
         <ul>
             <li><a href="../../../index.html">Home</a></li>
             <li><a href="../../../portfolio/index.html">Portfolio</a></li>
@@ -170,7 +170,7 @@
             <li><a href="../../../contact/index.html">Contact</a></li>
         </ul>
         <ul class="footer-icons">
-            <li><a href="www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
         </ul>
         <p class="index.html"><a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a></p>
