--- a/portfolio/js/image-slideshow/index.html
+++ b/portfolio/js/image-slideshow/index.html
@@ -174,7 +174,7 @@
             <li><a href="../../../contact/index.html">Contact</a></li>
         </ul>
         <ul class="footer-icons">
-            <li><a href="www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
         </ul>
         <p><a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a></p>
