--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -59,7 +59,7 @@
     <!-- navigation menu -->
 
     <nav class="container-menu menu-desktop menu-sticky">
-        <a href="../../index.html"><img src="../../assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
+        <a href="../../index.html"><img src="assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
         <ul class="">
             <li><a href="../../index.html">Home</a></li>
             <li><a href="#">Portfolio</a></li>
@@ -227,7 +227,7 @@
 		</ul>
 
 		<ul class="footer-icons">
-			<li><a href="www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/thomas-paredes08" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 			<li><a href="https://github.com/Thommy21" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
