--- a/store/index.html
+++ b/store/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="../assets/css/custom.css" />
 
 	<!-- Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
 
     <!-- Font Awesome 6 icons for buttons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -27,13 +30,13 @@
 		
 		/* Amazon-style buttons */
 		.section-selector-1 a.btn:link,
-		.section-selector-1 a.btn:visited { background-color: var(--yellow-400) }
+		.section-selector-1 a.btn:visited { background-color: #B08D57; }
 
 		.section-selector-1 a.btn:link,
-		.section-selector-1 a.btn:visited { color: var(--blue-800) }
+		.section-selector-1 a.btn:visited { color: #080D10; }
 
 		.section-selector-1 a.btn:link,
-		.section-selector-1 a.btn:visited { border-color: var(--yellow-400) }
+		.section-selector-1 a.btn:visited { border-color:#080D10; }
 
 		.section-selector-1 a.btn:focus,
 		.section-selector-1 a.btn:hover,
@@ -41,7 +44,7 @@
 
 		.section-selector-1 a.btn:focus,
 		.section-selector-1 a.btn:hover,
-		.section-selector-1 a.btn:active { border-color: var(--yellow-500) }
+		.section-selector-1 a.btn:active { border-color: #080D10; }
 
 	</style>
 
@@ -53,7 +56,7 @@
     <!-- navbar start here -->
     <nav class="theme-dark"><div class="container-menu">
         <a href="../index.html" class="brand">
-            <img src="../assets/img/larger_ferrari_tp_logo.png" alt="Sample website logo"></a>
+            <img src="../assets/img/ttrace_logo_clean_250x60.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
