--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="../assets/css/custom.css" />
 
 	<!-- Google Fonts -->
-
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <!-- Font Awesome 6 icons. Delete if not using. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">    
@@ -31,7 +33,7 @@
     <!-- menu and 'hero block' header -->
     <nav class="theme-dark"><div class="container-menu">
         <a href="../index.html" class="brand">
-            <img src="../assets/img/larger_ferrari_tp_logo.png" alt="Sample website logo"></a>
+            <img src="../assets/img/ttrace_logo_clean_250x60.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
